--- a/src/scss/components/proekt-public.scss
+++ b/src/scss/components/proekt-public.scss
@@ -107,7 +107,6 @@
 .prpb__category__wrap{
     display: none;
     flex-wrap: wrap;
-    gap: 0 96px;
     &.active{
         display: flex;
     }
@@ -115,6 +114,9 @@
 
 .prpb__category__col{
     padding-left: 5px;
+    &:first-child{
+        margin-right: 96px;
+    }
 }
 
 .prpb__category__item{
@@ -163,6 +165,9 @@
 
 
 @media(max-width: 767px){
+    .prpb__category__col:first-child{
+        margin-right: 0;
+    }
     .prpb__input{
         font-size: 16px;
         line-height: 24px;
@@ -197,13 +202,12 @@
         display: flex;
         align-items: flex-start;
         flex-wrap: wrap;
-        gap: 10px 0;
         margin: 0;
         padding: 0;
     }
     li{
         list-style: none;
-       
+        margin-bottom: 10px;
         position: relative;
         display: flex;
         align-items: center;
@@ -237,7 +241,7 @@
     }
 }
 .exp-content--prbp{
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 // step 2
@@ -299,14 +303,16 @@
 }
 .prpb__detail__wrap{
     display: flex;
-    gap: 8px;
+    margin: 0 -4px;
     width: 100%;
     height: 546px;
     max-height: calc(90vh - 90px);
     overflow-x: auto;
 }
 .prpb__detail__col{
-    width: calc(100% / 3);
+    width: calc(100% / 3 - 8px);
+    margin-right: 4px;
+    margin-left: 4px;
     min-width: 300px;
     height: 100%;
     overflow: auto;
@@ -485,7 +491,6 @@
 
 .prpb__type{
     display: flex;
-    gap: 15px 52px;
     margin-top: 22px;
 }
 .prpb__type__item{
@@ -498,6 +503,9 @@
     position: relative;
     &:hover{
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    }
+    &:first-child{
+        margin-right: 52px;
     }
     input{
         position: absolute;
@@ -600,9 +608,8 @@
 }
 
 @media(max-width: 1200px){
-    .prpb__type{
-        
-        gap: 15px;
+    .prpb__type__item:first-child{
+        margin-right: 15px;
     }
 }
 
@@ -623,6 +630,10 @@
         width: 304px;
         max-width: 100%;
         padding: 20px;
+        margin-bottom: 15px;
+    }
+    .prpb__type__item:first-child{
+        margin-right: 0px;
     }
 }
 @media(max-width: 767px){
@@ -760,9 +771,8 @@
 .choose__lang{
     display: flex;
     flex-wrap: wrap;
-    gap: 12px;
     margin-top: 18px;
-    margin-bottom: 18px;
+    margin-bottom: 6px;
 }
 .choose__lang__item{
     background: #DBEEFB;
@@ -777,6 +787,8 @@
     margin-bottom: 5px;
     margin-right: 5px;
     font-family: "Mulish";
+    margin-right: 12px;
+    margin-bottom: 12px;
     button{
         background-color: transparent;
         border: 0;
@@ -797,8 +809,7 @@
 .propose__lang{
     display: flex;
     flex-wrap: wrap;
-    gap: 12px;
-    margin-bottom: 46px;
+    margin-bottom: 34px;
 }
 .propose__lang__item{
     background: #E5E5E5;
@@ -810,6 +821,8 @@
     font-family: "Mulish";
     color: #3C64B1;
     cursor: pointer;
+    margin-right: 12px;
+    margin-bottom: 12px;
 }
 .prpb__add-lang__wrap{
     margin-top: 14px;
@@ -901,14 +914,15 @@
 .prpb__radios{
     display: flex;
     flex-wrap: wrap;
-    gap: 20px 54px;
     margin-top: 16px;
-    margin-bottom: 46px;
+    margin-bottom: 26px;
 }
 .prpb__radios__item{
     display: flex;
     align-items: center;
     cursor: pointer;
+    margin-right: 54px;
+    margin-bottom: 20px;
     input{
         position: absolute;
         z-index: -1;
